# Gemstone-Price-Prediction

./: README.md  application.py  pyproject.toml
notebook/: EDA_Gemstone_Price.ipynb  Model_Gemstone_Price.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/gemstone_price_prediction/: data_ingestion.py  exception.py  utils.py
src/gemstone_price_prediction/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/gemstone_price_prediction/pipeline/: predict_pipeline.py
templates/: index.html
