[project]
name = "Gemstone-Price-Prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Silvana K", email = "silvanakoharian@gmail.com"},
]
dependencies = [
    "pandas>=2.2.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.1.post1",
    "catboost>=1.2.3",
    "xgboost>=2.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
]
